--- a/Android/res/layout/win.xml
+++ b/Android/res/layout/win.xml
@@ -46,7 +46,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical|center_horizontal" >
+            android:gravity="center_vertical|center_horizontal" android:layout_marginTop="250dp">
 
             <ImageView
                 android:id="@+id/draw"
